Added validation for address
- Created Validation Chain
- Added validation for Address
- Renamed User service to Civitas

#9
