# server/gateway/api/swagger.yaml
@@ -391,6 +391,7 @@ definitions:
     - "firstName"
     - "lastName"
     - "msisdn"
+    - "addresses"
     properties:
       firstName:
         type: "string"
@@ -404,7 +405,7 @@ definitions:
         type: "string"
         pattern: "^27((60[3-9]|64[0-5])\\d{6}|(7[1-4689]|6[1-3]|8[1-4])\\d{7})$"
         maxLength: 128
-        description: "The user's contact number"
+        description: "The user's msisdn number"
         #Ref: http://wa.rwick.com/2016/06/09/validating-south-african-cell-numbers-with-a-regular-expression-regex/
       email:
         type: "string"
@@ -412,8 +413,10 @@ definitions:
         minLength: 6
         maxLength: 128
         description: "The email of the user"
-      address:
-        $ref: "#/definitions/addressRequest"
+      addresses:
+        type: array
+        items:
+          $ref: "#/definitions/addressRequest"
       arCompanies:
         type: "array"
         items:
@@ -446,19 +449,21 @@ definitions:
         type: "string"
         maxLength: 128
         description: "The lastname of the user"
+
       msisdn:
         type: "string"
         pattern: "^27((60[3-9]|64[0-5])\\d{6}|(7[1-4689]|6[1-3]|8[1-4])\\d{7})$"
         maxLength: 128
-        description: "The user's contact number"
+        description: "The user's msisdn"
       email:
         type: "string"
         format: "email"
         minLength: 6
         maxLength: 128
-        description: "The email of the user"
-      address:
-        $ref: "#/definitions/addressResponse"
+      addresses:
+        type: array
+        items:
+          $ref: "#/definitions/addressResponse"
       arCompanies:
         type: "array"
         items:
@@ -479,6 +484,12 @@ definitions:
         type: "string"
         enum: ["active", "inactive"]
         description: "The firstname of the user"
+      createdAt:
+        type: "string"
+        description: "The created date"
+      updatedAt:
+        type: "string"
+        description: "The updated date"
 
   userUpdateRequest:
     type: "object"
@@ -497,8 +508,10 @@ definitions:
         minLength: 6
         maxLength: 128
         description: "The email of the user"
-      address:
-        $ref: "#/definitions/addressRequest"
+      addresses:
+        type: array
+        items:
+          $ref: "#/definitions/addressRequest"
       arCompanies:
         type: "array"
         items:
@@ -590,47 +603,69 @@ definitions:
   addressRequest:
     type: "object"
     required:
-    - "line1"
-    - "city"
-    - "country"
-    - "postalCode"
+    - "isPrimary"
     properties:
-      line1:
-        type: "string"
-        maxLength: 128
-        description: "The first line of address"
-      line2:
-        type: "string"
-        maxLength: 128
-        description: "The second line of address"
-      city:
-        type: "string"
-        maxLength: 128
-        description: "The city"
-      state:
-        type: "string"
-        maxLength: 128
-        description: "The state"
-      province:
-        type: "string"
-        maxLength: 128
-        description: "The province"
-      country:
-        type: "string"
-        maxLength: 128
-        description: "The country"
-      postalCode:
-        type: "string"
-        maxLength: 128
-        description: "The postal code"
+      detail:
+        $ref: "#/definitions/addressDetail"
+      location:
+        $ref: "#/definitions/location"
+      isPrimary:
+        type: "boolean"
+        description: "Indicates if this is the primary address"
 
   addressResponse:
+    type: "object"
+    properties:
+      detail:
+        $ref: "#/definitions/addressDetail"
+      location:
+        $ref: "#/definitions/location"
+      isPrimary:
+        type: "boolean"
+        description: "Indicates if this is the primary address"
+      createdAt:
+        type: "string"
+        description: "The created date"
+      updatedAt:
+        type: "string"
+        description: "The updated date"
+
+  phoneNumberRequest:
+    type: "object"
+    required:
+    - "type"
+    - "number"
+    properties:
+      number:
+        type: "string"
+        description: "The user's phone number"
+      type:
+        type: "string"
+        enum: ["personal", "business", "home"]
+        description: "The type of the landline number"
+
+  phoneNumberResponse:
+    type: "object"
+    required:
+    - "type"
+    - "number"
+    properties:
+      number:
+        type: "string"
+        description: "The user's phone number"
+      type:
+        type: "string"
+        enum: ["personal", "business", "home"]
+        description: "The type of the landline number"
+
+  addressDetail:
     type: "object"
     required:
     - "line1"
     - "city"
     - "country"
     - "postalCode"
+    - "type"
     properties:
       line1:
         type: "string"
@@ -660,6 +695,26 @@ definitions:
         type: "string"
         maxLength: 128
         description: "The postal code"
+      type:
+        type: "string"
+        enum: ["physical", "postal"]
+        description: "The type of the address"
+
+  location:
+    type: "object"
+    required:
+    - "type"
+    - "coordinates"
+    properties:
+      coordinates:
+        type: "array"
+        items:
+          type: "integer"
+          description: "The ids of the AR companies that service the user"
+      type:
+        type: "string"
+        enum: ["Point"]
+        description: "The longitude and latitude of the location"
 
   serverStatusResponse:
     type: "object"
@@ -681,6 +736,7 @@ definitions:
         type: "string"
       stack:
         type: "string"
+
   clientErrorModel:
     type: "object"
     required:
@@ -693,6 +749,7 @@ definitions:
         type: "string"
       stack:
         type: "string"
+
   validationErrorModel:
     type: "object"
     required:
